2013-06-01  Ramon Casero  <rcasero@gmail.com>

	* matlab/ThirdPartyToolbox/pointTriangleDistance.m: (0.1.0)

	- Minor reformatting of the help header and add some Gerardus
	properties and headers.

	* Add matlab/ThirdPartyToolbox/pointTriangleDistance.m:
	* Add matlab/ThirdPartyToolbox/pointTriangleDistance-license.txt:

	- Calculate distance between a point and a triangle in 3D. By
	Gwendolyn Fischer. Downloaded from

	http://www.mathworks.co.uk/matlabcentral/fileexchange/22857-distance-between-a-point-and-a-triangle-in-3d

	* Add matlab/ManifoldToolbox/closest_trifacet.m: (0.1.0)
	* Add matlab/test/test_closest_trifacet.m: (0.1.0)

	- CLOSEST_TRIFACET Closest triangular facet of a mesh to a point
	in 3D.

2013-05-31  Ramon Casero  <rcasero@gmail.com>

	* matlab/CgalToolbox/CMakeLists.txt: (0.2.0)

	- Add target to build cgal_closestfacet().

	* Add matlab/ManifoldToolbox/dmatrix_mesh.m: (0.1.0)

	- DMATRIX_MESH Sparse distance and shortest-path distance matrices
	between the nodes of a mesh.

	* Delete matlab/PointsToolbox/dmatrix_complete.m:

	- One liner function that simply adds an unnecessary layer to dijkstra().

	* matlab/PointsToolbox/dmatrix.m: (0.3.1)

	- Update deprecated syntax to check input and output arguments.

2013-05-30  Ramon Casero  <rcasero@gmail.com>

	* matlab/VectorWrapper.h: (0.5.1)

	- Fix bug. Make the ValueType template element of the partial
	specialisation for itk::Size less specific. Otherwise, the
	BoxFilterType::RadiusValueType from the Median filter in
	ItkImFilter.cpp is not recognised by the partial specialisation.

	* matlab/ItkToolbox/ItkImFilter.cpp: (1.4.1)

	- Fix bug. Wrong variable name for default maximum error in Canny edge detector.

	- Fix bug. I had forgotten to uncomment the rest of the filters.

	* matlab/ItkToolbox/ItkImFilter.cpp: (1.4.0)
	* matlab/ItkToolbox/itk_imfilter.m: (0.7.3)
	* matlab/test/test_itk_imfilter.m: (0.4.1)

	- Add CannyEdgeDetectionImageFilter.

	* Add some image data files for tests:
